--- a/lab8/rest/pom.xml
+++ b/lab8/rest/pom.xml
@@ -46,5 +46,17 @@
             <artifactId>javaee-api</artifactId>
             <version>8.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.2.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.clojure</groupId>
+            <artifactId>java.jdbc</artifactId>
+            <version>0.7.9</version>
+        </dependency>
     </dependencies>
 </project>
